syntax = "proto3";

package conveyor_etl.transform;

import "common.proto";

service TransformService {
  rpc ProcessBatch(ProcessBatchRequest) returns (ProcessBatchResponse);
  rpc ProcessStream(stream ProcessStreamRequest) returns (stream ProcessStreamResponse);
  rpc GetCapabilities(conveyor_etl.common.Empty) returns (Capabilities);
}

message ProcessBatchRequest {
  string transform_id = 1;
  conveyor_etl.common.RecordBatch input_batch = 2;
  map<string, string> transform_config = 3;
}

message ProcessBatchResponse {
  string batch_id = 1;
  repeated TransformResult results = 2;
}

message TransformResult {
  conveyor_etl.common.RecordId original_id = 1;
  TransformStatus status = 2;
  repeated conveyor_etl.common.Record output_records = 3;
  string error_message = 4;
}

enum TransformStatus {
  TRANSFORM_STATUS_UNSPECIFIED = 0;
  TRANSFORM_STATUS_SUCCESS = 1;
  TRANSFORM_STATUS_FILTERED = 2;
  TRANSFORM_STATUS_ERROR = 3;
  TRANSFORM_STATUS_SPLIT = 4;
}

message ProcessStreamRequest {
  oneof msg {
    StreamInit init = 1;
    conveyor_etl.common.Record record = 2;
    FlushCommand flush = 3;
  }
}

message StreamInit {
  string transform_id = 1;
  string stream_id = 2;
  map<string, string> config = 3;
}

message FlushCommand {
  string stream_id = 1;
}

message ProcessStreamResponse {
  oneof msg {
    StreamReady ready = 1;
    TransformResult result = 2;
    StreamCompleted completed = 3;
  }
}

message StreamReady {
  string stream_id = 1;
  uint64 buffer_capacity = 2;
}

message StreamCompleted {
  string stream_id = 1;
  uint64 records_processed = 2;
}

message Capabilities {
  string transform_id = 1;
  repeated string supported_record_types = 2;
  bool supports_streaming = 3;
  uint32 max_batch_size = 4;
  uint32 max_concurrent_batches = 5;
}
